Cambio de Reoordenar
Se cambia la etiqueta de reoordenar

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<div>
 			    
 				<a href="javascript:" class="btn" onclick="reorder()">
-				    <i class="icon-retweet"></i> Re-order elements
+				    <i class="icon-retweet"></i> Reoordenar!
 				</a>
 			    <div class="input-prepend input-append">
 				<span class="add-on">$</span><input type="text" size="16" id="appendedPrependedInput" class="span2"><span class="add-on">.00</span>
